fix(tabstrip): improve alignment of close icon

--- a/packages/default/scss/tabstrip/_layout.scss
+++ b/packages/default/scss/tabstrip/_layout.scss
@@ -29,6 +29,7 @@
                 color: inherit;
                 cursor: pointer;
                 display: inline-flex;
+                vertical-align: middle;
                 flex: 1 1 0;
                 flex-direction: row;
                 align-content: center;
